{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "MasterMap",
            "id": "ce9fa691-7eb9-4e7b-8c07-6e42568dd062",
            "actions": [
                {
                    "name": "Random Red Walls",
                    "type": "Button",
                    "id": "ca49fc5e-2b5b-4bc2-a9c1-70e01327dade",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Red Walls Removal",
                    "type": "Button",
                    "id": "cae04f85-0e2e-4522-bb42-a90bfdcc6e5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Random Blue Walls",
                    "type": "Button",
                    "id": "eba972bf-4784-4035-bc0c-a8255bc20ea4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Blue Walls Removal",
                    "type": "Button",
                    "id": "bcf1a1a5-b432-4b24-ab7a-52f25767e92e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Random Yellow Walls",
                    "type": "Button",
                    "id": "e6cabf3e-0b3c-452d-b98d-3bfb997d3fff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Yellow Walls Removal",
                    "type": "Button",
                    "id": "5a371972-4fbf-4d17-9e2b-3fb8ad0e4862",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnSpeedChange",
                    "type": "Value",
                    "id": "258dda63-0a6c-4ecc-b3be-f5e62c89022e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BallSpeedChange",
                    "type": "Value",
                    "id": "588e2a68-8a0e-4ecb-885c-e737c2cd7828",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MasterBallHell",
                    "type": "Button",
                    "id": "1c0ad190-3dd7-4d74-b4ae-b27b806312ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerBallHell",
                    "type": "Button",
                    "id": "0fd6d556-60f0-4dc6-96ed-0878cc968c9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "983b64b9-9337-4782-9999-cd9b55a2aa9c",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Random Red Walls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51ce9d48-c73b-40c1-934e-02eddf4f2177",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Random Blue Walls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "693c09ff-8908-4b2b-984a-b75f71c5f47e",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Random Yellow Walls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "ef9e8610-36c1-4d9c-bf48-8c59b1c45853",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnSpeedChange",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a5491951-b5cc-46b4-a74c-7c3ad8c825ae",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnSpeedChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9ade23e6-5178-4e01-bbe0-9bcb69549a95",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnSpeedChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "4d7f76e2-7e37-4c7f-8c8b-99372d827032",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallSpeedChange",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e915d309-54d4-49f3-bfe0-3b022c43b1b3",
                    "path": "<Keyboard>/numpadDivide",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallSpeedChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5b99f510-acd2-4fd5-ad4a-adf4a514ba72",
                    "path": "<Keyboard>/numpadMultiply",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallSpeedChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d8dfa56d-be84-405f-90fe-1b88d66523b6",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Red Walls Removal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dddda22-b852-42a6-9618-1bb61b9768ee",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blue Walls Removal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6226877d-3876-415a-b6cf-5fa4b0f3e54f",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yellow Walls Removal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63c6eaf3-af74-4635-875a-52781ae1b47c",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MasterBallHell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3649e84f-7585-4e14-9ce6-46035d18722e",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBallHell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMap",
            "id": "0839a0c0-5347-4221-a330-07baca88839e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7eb26910-7108-452e-ac8c-e8fe350f084e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e821cd0b-f87b-48f5-8427-95d830b0528c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d05a110-25c5-46a8-aa6d-393266123772",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c1a833dd-0033-4aae-8ee6-e61f15fdf4a7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6203eb92-b928-43a4-b86d-eece7a288706",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "62ac56b3-c73b-4984-889a-1ead2ef1e26d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}